
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_15__ TYPE_7__ ;
typedef struct TYPE_14__ TYPE_6__ ;
typedef struct TYPE_13__ TYPE_5__ ;
typedef struct TYPE_12__ TYPE_4__ ;
typedef struct TYPE_11__ TYPE_3__ ;
typedef struct TYPE_10__ TYPE_2__ ;
typedef struct TYPE_9__ TYPE_1__ ;


struct TYPE_12__ {int ping; } ;
typedef TYPE_4__ playerState_t ;
struct TYPE_13__ {scalar_t__ state; int ping; TYPE_3__* frames; TYPE_2__* gentity; } ;
typedef TYPE_5__ client_t ;
struct TYPE_15__ {int integer; } ;
struct TYPE_14__ {TYPE_5__* clients; } ;
struct TYPE_11__ {scalar_t__ messageAcked; int messageSent; } ;
struct TYPE_9__ {int svFlags; } ;
struct TYPE_10__ {TYPE_1__ r; } ;


 scalar_t__ CS_ACTIVE ;
 int PACKET_BACKUP ;
 int SVF_BOT ;
 TYPE_4__* SV_GameClientNum (int) ;
 TYPE_7__* sv_maxclients ;
 TYPE_6__ svs ;

__attribute__((used)) static void SV_CalcPings( void ) {
 int i, j;
 client_t *cl;
 int total, count;
 int delta;
 playerState_t *ps;

 for (i=0 ; i < sv_maxclients->integer ; i++) {
  cl = &svs.clients[i];
  if ( cl->state != CS_ACTIVE ) {
   cl->ping = 999;
   continue;
  }
  if ( !cl->gentity ) {
   cl->ping = 999;
   continue;
  }
  if ( cl->gentity->r.svFlags & SVF_BOT ) {
   cl->ping = 0;
   continue;
  }

  total = 0;
  count = 0;
  for ( j = 0 ; j < PACKET_BACKUP ; j++ ) {
   if ( cl->frames[j].messageAcked <= 0 ) {
    continue;
   }
   delta = cl->frames[j].messageAcked - cl->frames[j].messageSent;
   count++;
   total += delta;
  }
  if (!count) {
   cl->ping = 999;
  } else {
   cl->ping = total/count;
   if ( cl->ping > 999 ) {
    cl->ping = 999;
   }
  }


  ps = SV_GameClientNum( i );
  ps->ping = cl->ping;
 }
}
